--- a/image-editing/flux-headshot.mdx
+++ b/image-editing/flux-headshot.mdx
@@ -18,7 +18,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
    "key": "your_api_key",  
    "prompt": "pretty woman",  
    "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  
-   "face_image":"https://i.ibb.co/qYMvpkH/7b12610da886d2a8a31e62758b4b6e7c.webp",  
+   "face_image":"https://assets.modelslab.com/generations/dadf8fb5-ee78-4038-b0d7-3dde65547217",  
    "width": "1024",  
    "height": "1024",  
    "num_inference_steps": "21",  
