--- a/image-editing/removebg-createmask.mdx
+++ b/image-editing/removebg-createmask.mdx
@@ -19,7 +19,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 {    
     "key":"",    
     "seed":12345,    
-    "image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/2ILk0g1tgpk7wFFlc72hyAtdmHjxAj-metaZjNkNzVjMWQtMTI1OS00NDA4LTg0YmQtNzA0NTVmMTljZjcwLTAucG5n-.png",    
+    "image":"https://assets.modelslab.com/generations/31d4567d-b60a-4d09-9650-987fc0aae2cf",    
     "post_process_mask": false,    
     "only_mask": false,    
     "alpha_matting":false,    
