--- a/image-generation/controlnet/controlnet-main.mdx
+++ b/image-generation/controlnet/controlnet-main.mdx
@@ -116,9 +116,9 @@ This endpoint also supports schedulers. Use the `scheduler` parameter in the req
           "model_id": "realistic-vision-51",
           "auto_hint": "yes",
           "guess_mode": "no",
-          "prompt": "(a frog wearing blue jean), full-body, Ghibli style, Anime, vibrant colors",
+          "prompt": "a girl, wearing red bikini, looking at camera, ocean in background",
           "negative_prompt": "human, unstructure, (black object, white object), colorful background, nsfw",
-          "init_image": "https://example.com/input-image.jpg",
+          "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/qyA2waUVja192VOgQ3WwIRuKxJzRpA-metaZDc3NTFmOGE3NjgxYzA4MGQ1Yjg3NjA2ZjFlYzU1YTMuanBn-.jpg",
           "mask_image": null,
           "width": "512",
           "height": "512",
