--- a/image-generation/model-operation/upload-model.mdx
+++ b/image-generation/model-operation/upload-model.mdx
@@ -23,7 +23,7 @@ Send a `POST` request to below endpoint.
   "model_format": "safetensors",    
   "model_visibility": "public",    
   "model_name": "stable-diffusion-1.0-inpainting-0.1",    
-  "model_image": "https://cdn2.stablediffusionapi.com/generations/1a14cab3-cc79-4cee-ab28-29379bff766b-0.png",    
+  "model_image": "https://assets.modelslab.com/generations/95aebdb1-302f-42c4-b461-64b6ce9214e4",    
   "hf_upload": "no"
 }
 ```
@@ -40,7 +40,7 @@ Send a `POST` request to below endpoint.
   "model_format": "diffusers",    
   "model_visibility": "public",    
   "model_name": "stable-diffusion-xl-1.0-inpainting-0.1",    
-  "model_image": "https://cdn2.stablediffusionapi.com/generations/1a14cab3-cc79-4cee-ab28-29379bff766b-0.png",    
+  "model_image": "https://assets.modelslab.com/generations/95aebdb1-302f-42c4-b461-64b6ce9214e4",    
   "hf_upload": "no"
 }
 ```
