--- a/image-editing/head-shot.mdx
+++ b/image-editing/head-shot.mdx
@@ -24,7 +24,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
   "key": "your_api_key",  
   "prompt": "pretty woman",  
   "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  
-  "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",  
+  "face_image":"https://assets.modelslab.com/generations/568d6320-8b6c-4af8-8725-51c0c9f633a3",  
   "width": "512",  
   "height": "512",  
   "samples": "1",  
