--- a/interior-api/room-decorator.mdx
+++ b/interior-api/room-decorator.mdx
@@ -14,8 +14,8 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ```json json
 {  
     "key":"",  
-    "init_image": "https://upcdn.io/12a1yeE/raw/WhatsApp%20Image%202024-04-04%20at%208.06.42%20AM.jpeg",  
-    "prompt": "luxury badroom, table, red carpet, wodden floor",  
+    "init_image": "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/EWERWHABWAfXlxcGPkws35v5LJGP1g-metaOTI4YWZjODg5YzZjMWZlY2NkMGJhZDI2ZmY4NWE0YjNbMV0uanBn-.jpg",  
+    "prompt": "A luxurious bedroom featuring an elegant table, rich red carpet, and polished wooden flooring",  
     "negative_prompt": "bad quality",  
     "seed": 0,  
     "guidance_scale": 8,  
