--- a/video-api/texttovideo-ultra.mdx
+++ b/video-api/texttovideo-ultra.mdx
@@ -7,7 +7,12 @@ description: "Generate high-definition videos from text descriptions using the T
 ### Text to Video Ultra
 Generate HD videos from text descriptions.
 
-<video loop mute autoPlay className="w-full aspect-video rounded-lg" src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/FWeftvb9Gi2qdTzIENBXazbTIJYbC5-metaZmJlNjI4MTEtYTFiNS00OTY4LTkzZWEtYTgwMThjN2FkZjVkLm1wNA==-.mp4" />
+<video 
+loop 
+autoPlay 
+className="w-full aspect-video rounded-lg" 
+src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/FWeftvb9Gi2qdTzIENBXazbTIJYbC5-metaZmJlNjI4MTEtYTFiNS00OTY4LTkzZWEtYTgwMThjN2FkZjVkLm1wNA==-.mp4" 
+/>
 
 ## Request
 Make a `POST` request to below endpoint and pass the required parameters in the request body.
