--- a/enterprise-api/text-to-video-ultra/text-to-video-ultra.mdx
+++ b/enterprise-api/text-to-video-ultra/text-to-video-ultra.mdx
@@ -3,11 +3,12 @@ title: "Text to Video Ultra"
 description: "This endpoint is used to generate HD video from a given text prompt."
 ---
 
-<video
-  controls
-  className="w-full aspect-video rounded-xl"
-  src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/R1RcY49EKLk600eJMDDQaKU3ZM0rc7-metaZTllYWIyOTYtNGM1Yy00NzgyLWI2OTctZGVlNWY3ODhkYmFmLm1wNA==-.mp4"
-></video>
+<video 
+loop 
+autoPlay 
+className="w-full aspect-video rounded-lg" 
+src="https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/FWeftvb9Gi2qdTzIENBXazbTIJYbC5-metaZmJlNjI4MTEtYTFiNS00OTY4LTkzZWEtYTgwMThjN2FkZjVkLm1wNA==-.mp4" 
+/>
 
 ## Request
 Make a `POST` request to below endpoint and pass the required parameters in the request body.
