fixed endpoint links for dreambooth fetch, img2img, t2i, inpaint and also removed the tomesd, enhanceprompt, panoarama, self attn

--- a/image-generation/realtime-stable-diffusion/fetchimage.mdx
+++ b/image-generation/realtime-stable-diffusion/fetchimage.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Fetch Image"
-openapi: 'POST /fetch/{id}'
+openapi: "POST /realtime/fetch/{id}"
 description: 'Fetch Queued Images API fetches queued images from stable diffusion.'
 ---
 
