--- a/image-generation/realtime-stable-diffusion/image-to-image.mdx
+++ b/image-generation/realtime-stable-diffusion/image-to-image.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Image to Image"
-openapi: 'POST /img2img'
+openapi: 'POST /realtime/img2img'
 description: 'Generates a new image from a existing image.'
 ---
 
