--- a/image-generation/realtime-stable-diffusion/inpaint.mdx
+++ b/image-generation/realtime-stable-diffusion/inpaint.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Inpainting"
-openapi: 'POST /inpaint'
+openapi: 'POST /realtime/inpaint'
 description: 'Generates and returns an image from an image and a mask.'
 ---
 
