--- a/image-generation/realtime-stable-diffusion/text-to-image.mdx
+++ b/image-generation/realtime-stable-diffusion/text-to-image.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Text to Image"
-openapi: 'POST /text2img'
+openapi: 'POST /realtime/text2img'
 description: 'Generate images fast with normal quality, where speed is more critical than high resolution.'
 ---
 
