--- a/enterprise-api/image-editing/fetchimage.mdx
+++ b/enterprise-api/image-editing/fetchimage.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Fetch Image"
 description: "This endpoint is used to fetch an image."
-openapi: "POST /image_editing/fetch/{id}"
+openapi: "POST /enterprise/image_editing/fetch/{id}"
 ---
 
 ## Request
