--- a/enterprise-api/video/clear-cache.mdx
+++ b/enterprise-api/video/clear-cache.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Clear Cache"
 description: "This endpoint is used to clear the API's cache."
-openapi: "POST /video/clear_cache"
+openapi: "POST /enterprise/video/clear_cache"
 ---
 
 ## Request
