--- a/enterprise-api/video/fetch-video.mdx
+++ b/enterprise-api/video/fetch-video.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Fetch Video"
 description: "This endpoint is used to fetch a queued video."
-openapi: "POST /video/fetch/{id}"
+openapi: "POST /enterprise/video/fetch/{id}"
 ---
 ## Request
 Send a `POST` request to below endpoint to return the corresponding queued videos. Where `{id}` is the ID returned together with the image URL in the response upon its generation. This endpoint does not generate new video, it returns already generated/queued videos.
