--- a/enterprise-api/video/update-server.mdx
+++ b/enterprise-api/video/update-server.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Update Server"
 description: "This endpoint is used to update your dedicated server."
-openapi: "POST /video/update_server"
+openapi: "POST /enterprise/video/update_server"
 ---
 
 ## Request
