--- a/image-editing/base64-to-url.mdx
+++ b/image-editing/base64-to-url.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Base64 to URL"
-openapi: 'POST /base64_to_url'
+openapi: 'POST /image_editing/base64_to_url'
 description: 'This endpoint allows you to upload image in base64 format and get it in url format.'
 ---
 
