--- a/image-editing/fashion.mdx
+++ b/image-editing/fashion.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Fashion"
-openapi: 'POST /fashion'
+openapi: 'POST /image_editing/fashion'
 descriptions: 'Allows overlaying a clothing image on a model body; inputs need white background, full-body model, and isolated clothing.'
 ---
 
