--- a/image-editing/fetchimage.mdx
+++ b/image-editing/fetchimage.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Fetch Image"
-openapi: 'POST /fetch/{id}'
+openapi: 'POST /image_editing/fetch/{id}'
 description: 'Retrieve queued images using the Fetch Queued Images API.'
 ---
 <Note>
