--- a/image-editing/flux-headshot.mdx
+++ b/image-editing/flux-headshot.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flux Head Shot"
-openapi: 'POST /flux_headshot'
+openapi: 'POST /image_editing/flux_headshot'
 description: 'This endpoint allows you to generate head shot with flux capabilities.'
 ---
 ### Flux Headshot
