--- a/image-editing/head-shot.mdx
+++ b/image-editing/head-shot.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Head shot"
-openapi: 'POST /head_shot'
+openapi: 'POST /image_editing/head_shot'
 description: 'This endpoint allows you to generate head shot image.'
 ---
 
