--- a/image-editing/imagemixer.mdx
+++ b/image-editing/imagemixer.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Image Mixer"
-openapi: 'POST /img_mixer'
+openapi: 'POST /image_editing/img_mixer'
 description: 'This endpoint generates image by mixing multiple images.'
 ---
 
