--- a/image-editing/mask-creator.mdx
+++ b/image-editing/mask-creator.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mask Creator"
-openapi: 'POST /mask_creator'
+openapi: 'POST /image_editing/mask_creator'
 description: 'This endpoint helps to mask an object on a given image.'
 ---
 
