--- a/image-editing/object-remover.mdx
+++ b/image-editing/object-remover.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Object Removal"
-openapi: 'POST /object_removal'
+openapi: 'POST /image_editing/object_removal'
 description: 'This endpoint helps to remove object from an existing image.'
 ---
 
@@ -16,8 +16,8 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ```json json
 {    
   "key": "your_api_key",    
-  "init_image": "https://i.ibb.co/kMRK2mg/image2.jpg",    
-  "mask_image": "https://i.ibb.co/tH0Z8HY/mask2.jpg",    
+  "init_image": "https://assets.modelslab.com/generations/cc002943-8327-4a0e-899e-d0567527f84b",    
+  "mask_image": "https://assets.modelslab.com/generations/e0cc8b55-9250-43eb-8764-9040e1eeb1ec",    
   "track_id":null,    
   "webhook":null
 }
