--- a/image-editing/super-resolution.mdx
+++ b/image-editing/super-resolution.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Super Resolution"
-openapi: 'POST /super_resolution'
+openapi: 'POST /image_editing/super_resolution'
 description: 'Super Resolution API returns a super resolution version of the image.'
 ---
 
