--- a/enterprise-api/video/clear-queue.mdx
+++ b/enterprise-api/video/clear-queue.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Clear Queue"
 description: "This endpoint is used to clear the API's queue."
-openapi: "POST /video/clear_queue"
+openapi: "POST /enterprise/video/clear_queue"
 ---
 
 ## Request
