--- a/enterprise-api/video/restart-server.mdx
+++ b/enterprise-api/video/restart-server.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Restart Server"
 description: "This endpoint is used to restart your dedicated server."
-openapi: "POST /video/restart_server"
+openapi: "POST /enterprise/video/restart_server"
 ---
 
 ## Request
