--- a/enterprise-api/video/system-details.mdx
+++ b/enterprise-api/video/system-details.mdx
@@ -1,7 +1,7 @@
 ---
 title: "System Details"
 description: "This endpoint is used to get information about your server."
-openapi: "POST /video/system_details"
+openapi: "POST /enterprise/video/system_details"
 ---
 
 ## Request
