--- a/image-editing/face-gen.mdx
+++ b/image-editing/face-gen.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Face Generator"
-openapi: 'POST /face_gen'
+openapi: 'POST /image_editing/face_gen'
 description: 'This endpoint allows you to generate image with the face image provided.'
 ---
 
