--- a/image-editing/inpaint.mdx
+++ b/image-editing/inpaint.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Inpainting"
-openapi: 'POST /inpaint'
+openapi: 'POST /image_editing/inpaint'
 descriptions: 'Generates and returns an image from an image and a mask passed with their URLs in the request.'
 ---
 
@@ -30,8 +30,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
     "height": "512",  
     "samples": 1,  
     "num_inference_steps": "30",  
-    "safety_checker": "no",  
-    "enhance_prompt": "yes",  
+    "safety_checker": "no", 
     "guidance_scale": 5,  
     "strength": 0.7,  
     "base64": false,  
