--- a/image-editing/outpaint.mdx
+++ b/image-editing/outpaint.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Outpainting"
-openapi: 'POST /outpaint'
+openapi: 'POST /image_editing/outpaint'
 description: 'This endpoint helps to outpaint by expanding the giving image.'
 ---
 
