--- a/voice-cloning/song-generator.mdx
+++ b/voice-cloning/song-generator.mdx
@@ -20,7 +20,7 @@ Sample request when `lyrics_generation` is `false`
 
 ```json json
 {       
-    "key":"",   
+    "key":"your_api_key",   
     "lyrics_generation":false,    
     "init_audio":"https://storage.googleapis.com/falserverless/model_tests/diffrythm/rock_en.wav",    
     "lyrics":"[00:10.00]Moonlight spills through broken blinds [00:13.20]Your shadow dances on the dashboard shrine [00:16.85]Neon ghosts in gasoline rain",    
@@ -34,10 +34,10 @@ Sample request when `lyrics_generation` is `true`
 
 ```json json
 {       
-    "key":"",   
+    "key":"your_api_key",   
     "lyrics_generation":true,    
     "init_audio":"https://storage.googleapis.com/falserverless/model_tests/diffrythm/rock_en.wav",    
-    "lyrics":"[00:10.00]Moonlight spills through broken blinds [00:13.20]Your shadow dances on the dashboard shrine [00:16.85]Neon ghosts in gasoline rain",    
+    "prompt":"a rock song with lyrics about moonlight and shadows",    
     "webhook":null,     
     "track_id": null
 }
