--- a/enterprise-api/voice-cloning/text-to-audio.mdx
+++ b/enterprise-api/voice-cloning/text-to-audio.mdx
@@ -47,7 +47,7 @@ You can either pass `init_audio` or `voice_id`. However, if both are passed at t
 </ParamField>
 
 <ParamField query="voice_id" type="string">
-  Optional. A valid ID from the <a href="https://modelslab.com/voice-lists" target="_blank">list of voices</a>.
+  Optional. ID of voice from available list <a href="https://modelslab.com/voice-lists" target="_blank">Find Voice IDs Here</a>.
 </ParamField>
 
 <ParamField query="language" type="string" enum='["english", "arabic", "chinese", "spanish", "german", "czech", "dutch", "french", "hindi", "hungarian", "italian", "japanese", "korean", "polish", "russian", "turkish"]' default="english">
