--- a/enterprise-api/voice-cloning/voice-cover.mdx
+++ b/enterprise-api/voice-cloning/voice-cover.mdx
@@ -58,7 +58,7 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 </ParamField>
 
 <ParamField query="model_id" type="string" required>
-  ID of the voice cloning model. <a href="https://modelslab.com/models/category/voice-cloning" target="_blank">Get model_id here</a>.
+  ID of the voice cover model <a href="https://modelslab.com/models?feature=audiogen" target="_blank">Find Models Here</a>.
 </ParamField>
 
 <ParamField query="pitch" type="string" enum='["m2f", "f2m", "none"]' default="none">
