--- a/enterprise-api/deepfake/multiple-face-swap.mdx
+++ b/enterprise-api/deepfake/multiple-face-swap.mdx
@@ -16,6 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "key": "enterprise_api_key",  
     "init_image":"https://i.pinimg.com/564x/4c/6a/d0/4c6ad0f74a3a251344cb115699a9a7c9.jpg",  
     "target_image":"https://i.pinimg.com/564x/11/ac/0d/11ac0ddaf6962e395f30abc61043393e.jpg",  
+    "base64":false,
     "webhook": null,  
     "track_id": null
 }
@@ -33,6 +34,10 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 
 <ParamField query="target_image" type="string" required>
   The second image containing a face to replace the first image. (URL string)
+</ParamField>
+
+<ParamField query="base64" type="boolean" default="false">
+  If provided `init_image` is in base64 format or if you want generated images as base64 string, set to <code>true</code>. Default: <code>false</code>.
 </ParamField>
 
 <ParamField query="webhook" type="string">
