--- a/enterprise-api/deepfake/specific-face-swap.mdx
+++ b/enterprise-api/deepfake/specific-face-swap.mdx
@@ -16,6 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "init_image":" https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/DTs2zg3HELltVoQElpO3ec0f9BsAtS-metaNzExMTY5My1zYWxtYW4ta2hhbi1zaGFocnVraC1raGFuLTJbMV0ucG5n-.png",    
     "target_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/jznUIJy6FoM1nUkXZBCvhyrlbetau1-metabGljZW5zZWQtaW1hZ2UuanBn-.jpg",    
     "reference_image":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/9Mhbi9i0r9ADMfTpwTOqmyEQQyb6AK-metaSEQtd2FsbHBhcGVyLXNoYWhydWtoLWtoYW4tc3JrLWFjdG9yLWhlcm9bMV0uanBn-.jpg",    
+    "base64":false,
     "webhook": null,    
     "track_id": null
 }
@@ -41,6 +42,10 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 
 <ParamField query="watermark" type="bool" default="true">
   Whether the generated result should have a watermark. Available options: `true`, `false`
+</ParamField>
+
+<ParamField query="base64" type="boolean" default="false">
+  If provided `init_image` is in base64 format or if you want generated images as base64 string, set to <code>true</code>. Default: <code>false</code>.
 </ParamField>
 
 <ParamField query="webhook" type="string">
