--- a/enterprise-api/flux-headshot/make-gen.mdx
+++ b/enterprise-api/flux-headshot/make-gen.mdx
@@ -3,82 +3,61 @@ title: "Flux Head Shot"
 description: "This endpoint allows you to generate head shot with flux capabilities."
 ---
 
-## Overview[​](#overview "Direct link to Overview")
 
-This endpoint allows you to generate head shot with flux capabilities
-
-![Face gen endpoint result](\images\enterprise-api\flux-headshot\assets\images\Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
+![Face gen endpoint result](/images/enterprise-api/flux-headshot/assets/images/Face-Gen-90cdf5a0be5cc4e52b36cfcc87d9fb29.jpg)
 
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `flux_headshot` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24hours**
 </Warning>
 
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body to the endpoint.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen' \
 ```
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/flux\_headshot/make\_gen](https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen) endpoint and pass the required parameters as a request body to the endpoint.
+## Body Attributes
 
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
+<ParamField query="key" type="string" required placeholder="Your API key">
+  Required. Your API Key used for request authorization.
+</ParamField>
 
-| Parameter                 | Description                                                                                                                                   |
-| :------------------------ | :-------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**                   | Required. Your API Key used for request authorization                                                                                         |
-| **prompt**                | Required. Text prompt with description of the things you want in the image to be generated.                                                   |
-| **face\_image**           | Required. Link or valid base64 string image. This is the face you want your generations to resemble.                                          |
-| **width**                 | Width of your generated image. Max dimension: 2048 x 2048                                                                                     |
-| **height**                | Height of your generated image. Max dimension: 2048 x 2048                                                                                    |
-| **num\_inference\_steps** | Number of denoising steps. Max step accepted are 26                                                                                           |
-| **guidance\_scale**       | Scale for classifier-free guidance. Min value accepted is 1.0 and max value is 10.0                                                           |
-| **seed**                  | Required. Seed is used to reproduce results, same seed will give you same image in return again.                                              |
-| **base64**                | If provided init\_image is in base64 format or if you want your generated images as a base64 string, must be set to `true`. Default: `false`. |
-| **webhook**               | Set an URL to get a POST API call once the image generation is complete.                                                                      |
-| **track\_id**             | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                               |
+<ParamField query="prompt" type="string" required placeholder="Text prompt">
+  Required. Text prompt with description of the things you want in the image to be generated.
+</ParamField>
 
-## Example[​](#example "Direct link to Example")
+<ParamField query="face_image" type="string" required placeholder="Face image URL or base64">
+  Required. Link or valid base64 string image. This is the face you want your generations to resemble.
+</ParamField>
 
-### Body[​](#body "Direct link to Body")
+<ParamField query="width" type="number" placeholder="Width in px">
+  Width of your generated image. Max dimension: 2048 × 2048.
+</ParamField>
 
-Body
+<ParamField query="height" type="number" placeholder="Height in px">
+  Height of your generated image. Max dimension: 2048 × 2048.
+</ParamField>
 
-```
-{  "key": "",  "prompt": "pretty woman",  "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",  "width": "1024",  "height": "1024",  "num_inference_steps": "21",  "seed":null,  "guidance_scale": 7.5,  "webhook": null,  "track_id": null}
-```
+<ParamField query="num_inference_steps" type="number" placeholder="1-26">
+  Number of denoising steps. Maximum accepted steps: 26.
+</ParamField>
 
-### Request[​](#request-1 "Direct link to Request")
+<ParamField query="guidance_scale" type="number" placeholder="1.0-10.0">
+  Scale for classifier-free guidance. Accepted range: 1.0 – 10.0.
+</ParamField>
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="seed" type="number" required placeholder="Seed number">
+  Required. Seed is used to reproduce results, same seed will give you the same image again.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key": "",    "prompt": "pretty woman",    "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",    "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",    "width": "1024",    "height": "1024",    "num_inference_steps": "21",    "seed":null,    "guidance_scale": 7.5,    "webhook": null,    "track_id": null  });var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="base64" type="boolean" default="false">
+  If provided `init_image` is in base64 format or if you want generated images as base64 string, set to <code>true</code>. Default: <code>false</code>.
+</ParamField>
 
-```
-<?php$payload = [    "key" => "",    "prompt" => "pretty woman",    "negative_prompt" => "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",    "face_image" => "https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",    "width"=> "1024",    "height" => "1024",    "num_inference_steps" => "21",    "seed" => null,    "guidance_scale": 7.5,    "webhook" => null,    "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="webhook" type="string" placeholder="Webhook URL">
+  Set a URL to get a POST API call once the image generation is complete.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "prompt": "pretty woman",    "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",    "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",    "width": "1024",    "height": "1024",    "num_inference_steps": "21",    "seed": null,    "guidance_scale": 7.5,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
-
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen"payload = json.dumps({   "key": "",  "prompt": "pretty woman",  "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",  "face_image":"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",  "width": "1024",  "height": "1024",  "num_inference_steps": "21",  "seed": None,  "guidance_scale": 7.5,  "webhook": None,  "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
-
-```
-   OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n  \"key\": \"\",\n  \"prompt\": \"pretty woman\",\n  \"negative_prompt\": \"anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry\",\n  \"face_image\":\"https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg\",\n  \"width\": \"512\",\n  \"height\": \"512\",\n  \"samples\": \"1\",\n  \"num_inference_steps\": \"21\",\n  \"safety_checker\": false,\n  \"base64\": false,\n  \"seed\": null,\n  \"guidance_scale\": 7.5,\n  \"webhook\": null,\n  \"track_id\": null\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
-
-### Response[​](#response "Direct link to Response")
-
-Example Response
-
-```
-{    "status": "success",    "generationTime": 7.358475685119629,    "id": 32,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/temp/8c3ef6ea-1c44-4d69-91cb-fc11971a65d1-0.png"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/temp/8c3ef6ea-1c44-4d69-91cb-fc11971a65d1-0.png"    ],    "meta": {        "base64": "no",        "face_image": "https://media.allure.com/photos/647f876463cd1ef47aab9c88/3:2/w_2465,h_1643,c_limit/angelina%20jolie%20blonde%20hair%20chloe.jpg",        "file_prefix": "8c3ef6ea-1c44-4d69-91cb-fc11971a65d1",        "guidance_scale": 7.5,        "height": 512,        "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",        "num_inference_steps": 21,        "prompt": "pretty woman",        "samples": 1,        "seed": 4029484891,        "temp": "yes",        "width": 512    }}
-```
+<ParamField query="track_id" type="string" placeholder="Track ID">
+  This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.
+</ParamField>
