--- a/enterprise-api/flux-kontext-dev/image-to-image.mdx
+++ b/enterprise-api/flux-kontext-dev/image-to-image.mdx
@@ -13,14 +13,16 @@ Make a POST request to below endpoint and pass the required parameters as a requ
 ```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/flux_kontext_dev/img2img' \
 ```
+
 ## Body
 ```json json
 {
     
     "key": "enterprise_api_key",
-    "prompt": "a cat sitting on a bench",
+    "prompt": "The girl from image one holding the can from image two.",
     "negative_prompt": "bad quality",
-    "init_image": "https://raw.githubusercontent.com/CompVis/stable-diffusion/main/data/inpainting_examples/overture-creations-5sI6fQgYIuo.png",
+    "init_image": "https://assets.modelslab.com/generations/4a89e381-cdd0-46fc-b13e-00d8824d8171",
+    "init_image_2":"https://assets.modelslab.com/generations/85b9944d-74c5-46b2-9be5-ec7a5e212789",
     "width": "512",
     "height": "512",
     "samples": "1",
@@ -30,7 +32,6 @@ Make a POST request to below endpoint and pass the required parameters as a requ
     "seed": null,
     "webhook": null,
     "track_id": null
-
 }
 ```
 
@@ -49,7 +50,11 @@ Make a POST request to below endpoint and pass the required parameters as a requ
 </ParamField>
 
 <ParamField query="init_image" type="string" placeholder="Image URL">
-  Link to the Initial Image.
+  Upload the reference image you want to edit.
+</ParamField>
+
+<ParamField query="init_image_2" type="string" placeholder="Image URL">
+  Second image is optional. only upload second image when you want to merge 2 image.
 </ParamField>
 
 <ParamField query="width" type="number" placeholder="Width in px">
