--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -3,6 +3,14 @@ title: "API"
 description: "Follow along with updates across ModelsLab API and Developer Console."
 ---
 
+<Update label="2025-09-18" description="NSFW Image Check: threshold parameter">
+  ## Changelog
+
+  - Added `threshold` parameter to `POST /nsfw_image_check`.
+    - Type: number; range: 0–1; default: 0.5.
+    - Controls sensitivity for NSFW detection in images/videos.
+</Update>
+
 <Update label="2025-06-06" description="v0.1.1">
   <Frame>
     <img
