--- a/sdk/python.mdx
+++ b/sdk/python.mdx
@@ -3,13 +3,13 @@ title: Python
 description: "The client for Python provides a seamless interface to interact with Modelslab API."
 ---
 
-## Installation[​](#overview "Direct link to Overview")
+## Installation
 
 ```bash
 pip install modelslab_py
 ```
 
-## Connecting to Client [​](#overview "Direct link to Overview")
+## Connecting to Client 
 Create client to connect to modelslab api.
 
 ```Python
@@ -18,7 +18,7 @@ from modelslab_py.core.client import Client
 client = Client(api_key="your api key")
 ```
 
-## Select api schema [​](#overview "Direct link to Overview")
+## Select api schema
 Select particular api schema as need.
 ```Python
 # for realtime image generation api.
