feat: Add ModelsLab PHP Sdk, fixes: Fixes broken links for some pages. added commands to verify broken links and markdown.

--- a/enterprise-api/overview.mdx
+++ b/enterprise-api/overview.mdx
@@ -82,7 +82,7 @@ description: "Collection of All Enterprise APIs offfered by Modelslab."
     Create ultra-realistic videos from an image prompt.
   </Card>
 
-  <Card title="Enterprise Ultra Video" href="/enterprise-api/ultra-video/overview">
+  <Card title="Enterprise Text to Video Ultra" href="/enterprise-api/text-to-video-ultra/overview">
     Generate ultra high-quality video from text or image input.
   </Card>
 </CardGroup>
