--- a/enterprise-api/text-to-video-ultra/overview.mdx
+++ b/enterprise-api/text-to-video-ultra/overview.mdx
@@ -6,27 +6,27 @@ description: "Endpoints to generate ultra-high quality videos from text prompts 
 ## Endpoints
 
 <CardGroup cols={2}>
-  <Card title="Text to Video" icon="film" href="/enterprise-api/ultra-video/texttovideo">
+  <Card title="Text to Video Ultra" icon="film" href="/enterprise-api/text-to-video-ultra/text-to-video-ultra">
     Generate ultra-high quality video from a text prompt
   </Card>
 
-  <Card title="Fetch Video" icon="download" href="/enterprise-api/ultra-video/fetchvideo">
+  <Card title="Fetch Video" icon="download" href="/enterprise-api/text-to-video-ultra/fetch-video">
     Retrieve queued or processing video generation requests
   </Card>
 
-  <Card title="Clear Cache" icon="trash" href="/enterprise-api/ultra-video/clear-cache">
-    Clear the API’s server cache for fresh processing
+  <Card title="Clear Cache" icon="trash" href="/enterprise-api/text-to-video-ultra/clear-cache">
+    Clear the API's server cache for fresh processing
   </Card>
 
-  <Card title="Restart Server" icon="refresh" href="/enterprise-api/ultra-video/restart-server">
+  <Card title="Restart Server" icon="refresh" href="/enterprise-api/text-to-video-ultra/restart-server">
     Restart your dedicated video generation server
   </Card>
 
-  <Card title="System Details" icon="server" href="/enterprise-api/ultra-video/system-details">
+  <Card title="System Details" icon="server" href="/enterprise-api/text-to-video-ultra/system-details">
     Get information about your server status and performance
   </Card>
 
-  <Card title="Update Server" icon="arrow-up" href="/enterprise-api/ultra-video/update-server">
+  <Card title="Update Server" icon="arrow-up" href="/enterprise-api/text-to-video-ultra/update-server">
     Update your dedicated server to the latest version
   </Card>
 </CardGroup>
