--- a/sdk/client.mdx
+++ b/sdk/client.mdx
@@ -19,6 +19,12 @@ description: "The client for Dart provides a seamless interface to interact with
     Official Python SDK for ModelsLab API
   </Card>
   <Card
+    title="PHP"
+    href="/sdk/php"
+  >
+    Official PHP SDK for ModelsLab API
+  </Card>
+  <Card
     title="Dart"
     href="/sdk/dart"
   >
