--- a/video-api/overview.mdx
+++ b/video-api/overview.mdx
@@ -6,16 +6,16 @@ description: "API for generating and processing videos from text and images."
 ### Endpoints
 
 <CardGroup cols={2}>
-  <Card title="Text to Video" href="/video-api/texttovideo" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
+  <Card title="Text to Video" href="/video-api/text-to-video" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
     Generate videos from text descriptions using the Text to Video API.
   </Card>
-  <Card title="Image to Video" href="/video-api/imgtovideo" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+  <Card title="Image to Video" href="/video-api/img-to-video" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
     Generate videos from images using the Image to Video API.
   </Card>
-  <Card title="Text to video ultra" href="/video-api/texttovideo-ultra" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
+  <Card title="Text to video ultra" href="/video-api/text-to-video-ultra" img="/images/video-api/assets/images/Text-to-video-059ae4e254324cdd6b271d791167cb35.jpg">
     Generate high-definition videos from text descriptions using the Text to Video Ultra API.
   </Card>
-  <Card title="Image to video ultra" href="/video-api/imagetovideo-ultra" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
+  <Card title="Image to video ultra" href="/video-api/image-to-video-ultra" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
     Generate high-definition videos from images using the Image to Video Ultra API.
   </Card>
   <Card title="Scene Maker" href="/video-api/scene-maker" img="/images/video-api/assets/images/Image-to-video-06907dcc4363b727c589be0243af41f4.jpg">
