feat: add resets3 endpoint and rate limits.

--- a/enterprise-api/general/overview.mdx
+++ b/enterprise-api/general/overview.mdx
@@ -8,4 +8,7 @@ description: "Collection of endpoints that are general to all server types."
         <Card title="Update S3 Details" href="/enterprise-api/general/update-s3-details">
             This endpoint is used to update the S3 details on your dedicated server.
         </Card>
+        <Card title="Reset S3 Details" href="/enterprise-api/general/reset-s3">
+            This endpoint is used to reset/clear the S3 details on your dedicated server.
+        </Card>
 </CardGroup>
