--- a/image-generation/train-model/lora-finetune.mdx
+++ b/image-generation/train-model/lora-finetune.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Train a Lora Model with Custom Images"
 openapi: 'POST /lora_fine_tune'
-description: 'Train a Lora model any object or person with your own images.'
+description: 'Train a Lora model  on normal lora and sdxl with any object or person with your own images.'
 ---
 
 ## Request
