--- a/enterprise-api/flux-headshot/make-gen.mdx
+++ b/enterprise-api/flux-headshot/make-gen.mdx
@@ -16,6 +16,23 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 --request POST 'https://modelslab.com/api/v1/enterprise/flux_headshot/make_gen' \
 ```
 
+## Body
+```json json
+{
+   "key": "your_api_key",
+   "prompt": "pretty woman",
+   "negative_prompt": "anime, cartoon, drawing, big nose, long nose, fat, ugly, big lips, big mouth, face proportion mismatch, unrealistic, monochrome, lowres, bad anatomy, worst quality, low quality, blurry",
+   "face_image":"https://assets.modelslab.com/generations/dadf8fb5-ee78-4038-b0d7-3dde65547217",
+   "width": "1024",
+   "height": "1024",
+   "num_inference_steps": "21",
+   "seed":null,
+   "guidance_scale": 7.5,
+   "webhook": null,
+   "track_id": null
+}
+```
+
 ## Body Attributes
 
 <ParamField query="key" type="string" required placeholder="Your API key">
