--- a/interior-api/exterior-restorer.mdx
+++ b/interior-api/exterior-restorer.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Exterior Restorer"
 openapi: 'POST /interior/exterior_restorer'
-description: 'This endpoint allows you to convert bad exterior to good exterior .'
+description: 'This endpoint refreshes worn building exteriors into polished designs guided by your prompt.'
 ---
 
 ## Request
@@ -16,7 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 {  
     "key":"",  
     "init_image": "https://i.pinimg.com/736x/b2/94/76/b29476a69497bbc870d48a531e0008db.jpg",  
-    "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",  
+    "prompt": "make beautiful pink and golden color exterior",  
     "seed": 0,  
     "guidance_scale": 8,  
     "strength": 0.99,  
