--- a/interior-api/room-decorator.mdx
+++ b/interior-api/room-decorator.mdx
@@ -23,6 +23,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
     "num_inference_steps": 51,  
     "base64": false,  
     "temp": false,  
+    "specific_object": "mid-century coffee table",  
     "webhook":null,  
     "track_id": null
 }
