--- a/interior-api/scenario-changer.mdx
+++ b/interior-api/scenario-changer.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Scenario Changer"
 openapi: 'POST /interior/scenario_changer'
-description: 'This endpoint allows you to change the environment scenario to check how house will look in different scenario.'
+description: 'Swap the environment around your space to preview how a home looks across different scenarios.'
 ---
 
 ## Request
@@ -16,8 +16,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 {  
     "key":"",  
     "init_image": "https://imagedelivery.net/pp4qzjxmlvglhjqbm3erng/50bc1662-8d41-468e-55d0-9575ad096000/768",  
-    "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",  
-    "scenario":"taiga",
+    "scenario": "snow",  
     "seed": 0,  
     "guidance_scale": 8,  
     "strength": 0.99,  
