--- a/interior-api/sketch-rendering.mdx
+++ b/interior-api/sketch-rendering.mdx
@@ -15,7 +15,7 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 {  
     "key":"",  
     "init_image": "https://imagedelivery.net/pp4qzjxmlvglhjqbm3erng/50bc1662-8d41-468e-55d0-9575ad096000/768",  
-    "prompt": "rendering floor plan of the apartment layout,top view,white background,masterpiece, kitchen, living room, sofa, chair,bedroom,car best quality, extremely detailed,best illustration, best shadow",  
+    "prompt": "turn this pencil sketch of a modern home into a photorealistic render with warm evening lighting",  
     "seed": 0,  
     "guidance_scale": 8,  
     "strength": 0.99,  
