feat: add new object-removal endpoint and interior-mixer endpoint, update changelog, add new badge for new endpoints in the overview.

--- a/interior-api/overview.mdx
+++ b/interior-api/overview.mdx
@@ -23,4 +23,16 @@ description: 'The Interior API provides a collection of endpoints that allow you
   <Card title="Sketch rendering" href="/interior-api/sketch-rendering">
     Convert exterior house sketch into real world photo
   </Card>
+  <Card title="Object removal" href="/interior-api/object-removal">
+    <div className="flex items-start justify-between">
+      <span>Remove objects from images using AI-powered object removal</span>
+      <span className="badge-new">NEW</span>
+    </div>
+  </Card>
+  <Card title="Interior mixer" href="/interior-api/interior-mixer">
+    <div className="flex items-start justify-between">
+      <span>Add objects from one image into another room image</span>
+      <span className="badge-new">NEW</span>
+    </div>
+  </Card>
 </CardGroup>
