--- a/interior-api/scenario-changer.mdx
+++ b/interior-api/scenario-changer.mdx
@@ -15,7 +15,8 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
 ```json json
 {  
     "key":"",  
-    "init_image": "https://imagedelivery.net/pp4qzjxmlvglhjqbm3erng/50bc1662-8d41-468e-55d0-9575ad096000/768",  
+    "init_image": "https://imagedelivery.net/pp4qzjxmlvglhjqbm3erng/50bc1662-8d41-468e-55d0-9575ad096000/768",
+    "prompt": "A beautiful house in the snow",
     "scenario": "snow",  
     "seed": 0,  
     "guidance_scale": 8,  
