feat: New Image edit endpoint with openapi and changelog.

--- a/enterprise-api/image-editing/overview.mdx
+++ b/enterprise-api/image-editing/overview.mdx
@@ -6,6 +6,13 @@ description: "The image editing suite offers exclusive API endpoints with essent
 ### Endpoints
 
 <CardGroup cols={2}>
+  <Card title="Qwen Edit" icon="wand-magic-sparkles" href="/enterprise-api/image-editing/qwen-edit">
+    <div className="flex items-start justify-between">
+      <span>Edit images using the powerful Qwen AI model</span>
+      <span className="badge-new">NEW</span>
+    </div>
+  </Card>
+
   <Card title="Outpainting" icon="expand" href="/enterprise-api/image-editing/outpainting">
     Extend images beyond their original boundaries with AI-powered outpainting
   </Card>
