--- a/enterprise-api/image-editing/qwen-edit.mdx
+++ b/enterprise-api/image-editing/qwen-edit.mdx
@@ -3,6 +3,8 @@ title: "Qwen Edit"
 description: "This endpoint allows you to edit images using Qwen model."
 ---
 
+![Qwen Edit endpoint result](https://assets.modelslab.com/generations/cc18442d-6dc0-4eb2-9c40-27fa7c59dce4.jpg)
+
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `image_editing` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24hours**
 </Warning>
