--- a/image-editing/overview.mdx
+++ b/image-editing/overview.mdx
@@ -6,6 +6,12 @@ description: 'The image editing suite brings you some exclusive API endpoints wi
 ### Endpoints
 
 <CardGroup cols={2}>
+  <Card title="Qwen Edit" href="/image-editing/qwen-edit" img="">
+    <div className="flex items-start justify-between">
+      <span>This endpoint allows you to edit images using Qwen model.</span>
+      <span className="badge-new">NEW</span>
+    </div>
+  </Card>
   <Card title="Fashion" href="/image-editing/fashion" img="">
     Allows overlaying a clothing image on a model body; inputs need white background, full-body model, and isolated clothing.
   </Card>
