--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,22 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2025-10-27" description="Image Editing API: Qwen Edit">
+  ## New Image Editing Endpoint: Qwen Edit
+
+  Added Qwen Edit endpoint for AI-powered image editing using the Qwen model.
+
+  #### API Endpoints
+
+  - **Standard API**: `POST /api/v6/image_editing/qwen_edit`
+  - **Enterprise API**: `POST /api/v1/enterprise/image_editing/qwen_edit`
+
+  #### Key Features
+
+  - Prompt-based image editing and manipulation
+  - Support for single or multiple images (up to 4 images)
+</Update>
+
 <Update label="2025-10-17" description="Interior API: Object Removal and Interior Mixer">
   ## New Interior API Endpoints
 
