--- a/enterprise-api/image-editing/qwen-edit.mdx
+++ b/enterprise-api/image-editing/qwen-edit.mdx
@@ -19,12 +19,15 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 
 ```json json
 {
-  "key":"",
-  "prompt": "the woman wearing the dress",   
+  "key": "enterprise_api_key",
+  "prompt": "the woman wearing the dress",
   "init_image": [
     "https://assets.modelslab.ai/characters/68e7a7f153307.png",
     "https://i.pinimg.com/736x/6e/ab/48/6eab481a1ee8fcfaec32a316d2768a61.jpg"
-  ]
+  ],
+  "base64": false,
+  "webhook": null,
+  "track_id": null
 }
 ```
 
