move endpoint to image editing

--- a/image-editing/flux-kontext-img-to-image.mdx
+++ b/image-editing/flux-kontext-img-to-image.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Flux kontext Image to Image"
-openapi: '/image-generation/flux_kontext/openapi.json POST /img2img'
+openapi: 'POST /images/img2img'
 description: 'Create high quality image from text using FLUX Kontext model.'
 ---
 
