--- a/image-editing/overview.mdx
+++ b/image-editing/overview.mdx
@@ -12,6 +12,9 @@ description: 'The image editing suite brings you some exclusive API endpoints wi
       <span className="badge-new">NEW</span>
     </div>
   </Card>
+  <Card title="Flux Kontext Dev" href="/image-generation/flux_kontext/flux-kontext-img-to-image">
+    Edit image from text based using flux kontext model.
+  </Card>
   <Card title="Fashion" href="/image-editing/fashion" img="">
     Allows overlaying a clothing image on a model body; inputs need white background, full-body model, and isolated clothing.
   </Card>
@@ -38,6 +41,9 @@ description: 'The image editing suite brings you some exclusive API endpoints wi
   </Card>
   <Card title="Image Mixer" href="/image-editing/imagemixer" img="">
     Image mixers merges two images togethers to produce an eye catching result.
+  </Card>
+  <Card title="Flux Kontext Image to Image" href="/image-editing/flux-kontext-img-to-image" img="">
+    Create and edit high quality images from text and Image combined using FLUX Kontext Dev model.
   </Card>
   <Card title="Mask Creator" href="/image-editing/mask-creator" img="">
     This endpoint helps to mask an object on a given image.
