--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,16 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2025-10-28" description="Documentation: Flux Kontext Moved">
+  ## Flux Kontext Dev Moved to Image Editing API
+
+  Flux Kontext Image to Image endpoint moved from Image Generation API to Image Editing API section for better organization.
+
+  - **New Location**: [Image Editing API → Flux Kontext Image to Image](/image-editing/flux-kontext-img-to-image)
+  - **Endpoint**: `POST /api/v6/images/img2img`
+  - Fixed OpenAPI playground display
+</Update>
+
 <Update label="2025-10-27" description="Image Editing API: Qwen Edit">
   ## New Image Editing Endpoint: Qwen Edit
 
